--- a/grading/grading_mc_exams.Rmd
+++ b/grading/grading_mc_exams.Rmd
@@ -128,7 +128,7 @@ n_choices = 4
 n_questions = 40
 s = schemata(n_questions, n_choices)
 ```
-## MC exam with `r n_questions` questions and `r n_choices` choises
+## MC exam with `r n_questions` questions and `r n_choices` choices
 `r risbo_formular(s)`
 `r remindo_formular(s)`
 ```{r, echo=FALSE}
@@ -142,7 +142,7 @@ n_choices = 3
 n_questions = 50
 s = schemata(n_questions, n_choices)
 ```
-## MC exam with `r n_questions` questions and `r n_choices` choises
+## MC exam with `r n_questions` questions and `r n_choices` choices
 `r risbo_formular(s)`
 `r remindo_formular(s)`
 ```{r, echo=FALSE}
@@ -158,7 +158,7 @@ n_choices = 4
 n_questions = 50
 s = schemata(n_questions, n_choices)
 ```
-## MC exam with `r n_questions` questions and `r n_choices` choises
+## MC exam with `r n_questions` questions and `r n_choices` choices
 `r risbo_formular(s)`
 `r remindo_formular(s)`
 ```{r, echo=FALSE}
@@ -172,7 +172,7 @@ n_choices = 3
 n_questions = 60
 s = schemata(n_questions, n_choices)
 ```
-## MC exam with `r n_questions` questions and `r n_choices` choises
+## MC exam with `r n_questions` questions and `r n_choices` choices
 `r risbo_formular(s)`
 `r remindo_formular(s)`
 ```{r, echo=FALSE}
@@ -189,7 +189,7 @@ n_choices = 2
 n_questions = 80
 s = schemata(n_questions, n_choices)
 ```
-## MC exam with `r n_questions` questions and `r n_choices` choises
+## MC exam with `r n_questions` questions and `r n_choices` choices
 `r risbo_formular(s)`
 `r remindo_formular(s)`
 ```{r, echo=FALSE}
@@ -205,7 +205,7 @@ n_choices = 2
 n_questions = 90
 s = schemata(n_questions, n_choices)
 ```
-## MC exam with `r n_questions` questions and `r n_choices` choises
+## MC exam with `r n_questions` questions and `r n_choices` choices
 `r risbo_formular(s)`
 `r remindo_formular(s)`
 ```{r, echo=FALSE}
